--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <section class="our-mission">
         <img
           class="our-mission-img"
@@ -35,11 +35,36 @@
       </section>
 
       <section class="tea-of-the-month">
-        <div class="head-tea-of-the-month">
+        <div class="heading-tea-of-the-month">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at The Tea Cozy</h4>
         </div>
-        <div class="clip"></div>
+        <div class="clip">
+          <div class="single-clip">
+            <img class="clip-image" src="./assets/img-berryblitz.webp" alt="" />
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="single-clip">
+            <img class="clip-image" src="./assets/img-spiced-rum.webp" alt="" />
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="single-clip">
+            <img class="clip-image" src="./assets/img-donut.webp" alt="" />
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="single-clip">
+            <img class="clip-image" src="./assets/img-myrtle-ave.webp" alt="" />
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="single-clip">
+            <img
+              class="clip-image"
+              src="./assets/img-bedford-bizarre.webp"
+              alt=""
+            />
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </div>
       </section>
 
       <section class="locations"></section>
