feat: added Locations section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,36 @@
         </div>
       </section>
 
-      <section class="locations"></section>
+      <section class="locations">
+        <img
+          class="locations-img"
+          src="./assets/img-locations-background.webp"
+          alt=""
+        />
+        <div class="inside-location-bgImg">
+          <h2 style="color: wheat">Locations</h2>
+          <div class="locations-cards">
+            <div class="locations-card">
+              <h3>Downtown</h3>
+              <h4>384 West 4th St</h4>
+              <h4>Suite 108</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="locations-card">
+              <h3>East Bayside</h3>
+              <h4>3433 Phisherman's Avenue</h4>
+              <h4>(Northwest Corner)</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="locations-card">
+              <h3>Oakdale</h3>
+              <h4>515 Crescent Avenue</h4>
+              <h4>Second Floor</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
