--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           alt=""
         />
         <div class="inside-location-bgImg">
-          <h2 style="color: wheat">Locations</h2>
+          <h2>Locations</h2>
           <div class="locations-cards">
             <div class="locations-card">
               <h3>Downtown</h3>
@@ -99,6 +99,13 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="contact-us">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h4>917-555-8904</h4>
+      </div>
+      <h5 class="copyright">copyright The Tea Cozy 2024</h5>
+    </footer>
   </body>
 </html>
